--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   dio: ^4.0.4
+  cubit: ^0.1.2
 
 dev_dependencies:
   flutter_test:
