--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   dio: ^4.0.4
-  cubit: ^0.1.2
+  flutter_bloc: ^6.1.3
+  bloc: ^6.1.3
 
 dev_dependencies:
   flutter_test:
